# Password-checker

./: .dockerignore  Dockerfile  README.md  lang-english.txt  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/common/: logger.py  password_strength.py
src/dto/: password_model.py  password_response_model.py
src/services/: password_check.py
tests/: password_unittest.py  test_api.py
