[project]
name = "password-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "zxcvbn>=4.5.0",
]
