[project]
name = "password-checker"
version = "1.0.1"
description = "Validate your password via API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "types-zxcvbn>=4.5.0.20260518",
    "uvicorn>=0.49.0",
    "zxcvbn>=4.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
